<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Horoscope</string>
    <string name="language">eng</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="server_ip_today">http://pregnant.by/horo/horotoday.php</string>
    <string name="server_ip_tomorrow">http://pregnant.by/horo/horotomorrow.php</string>
    <string name="aries">aries</string>
    <string name="taurus">taurus</string>
    <string name="gemini">gemini</string>
    <string name="cancer">cancer</string>
    <string name="leo">leo</string>
    <string name="virgo">virgo</string>
    <string name="libra">libra</string>
    <string name="scorpio">scorpius</string>
    <string name="sagittarius">sagittarius</string>
    <string name="capricorn">capricorn</string>
    <string name="aquarius">aquarius</string>
    <string name="pisces">pisces</string>
    <string name="choosesign">Choose a sign</string>
    <string name="settings">Settings</string>
    <string name="langtext">Language</string>
    <string name="signtext">Sign</string>
    <string name="spanish">spanish</string>
    <string name="russian">russian</string>
    <string name="english">english</string>
    <string name="french">french</string>
    <string name="deutsch">german</string>
    <string name="chinese">chinese</string>
    <string name="japanese">japanese</string>
    <string name="chooselanguage">Choose a language</string>
    <string name="fortune">FORTUNE</string>
    <string name="health">HEALTH</string>
    <string name="love">LOVE</string>
    <string name="career">CAREER</string>
    <string name="server_ip_numbers">http://pregnant.by/horo/numbers.php</string>
    <string name="diagram">numbers</string>
    <string name="family">FAMILY</string>
    <string name="friends">FRIENDS</string>
    <string name="isready">is ready</string>
</resources>
